fix editor link not showing

--- a/_sass/cloudcannon.scss
+++ b/_sass/cloudcannon.scss
@@ -16,3 +16,7 @@
 		color: #333;
 	}
 }
+
+.cms-editor-active .editor-link {
+	display: block;
+}
